--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <title>w invitation</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans&family=The+Girl+Next+Door&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=The+Girl+Next+Door&family=Gilda+Display&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
   <meta name="description" content="2025년 3월 1일 (토) 15:40 웨딩 여율리">
-
   <meta property="og:url" content="https://happily-ever-after.vercel.app/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="영준과 다빈, 결혼합니다">
