--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>w invitation</title>
+  <!-- GOOGLE FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=The+Girl+Next+Door&family=Gilda+Display&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-  <meta name="description" content="2025년 3월 1일 (토) 15:40 웨딩 여율리">
+  <!-- KAKAO SHARE API INIT -->
+  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
+  <meta name="description" content="2025년 3월 1일(토) 15:40 웨딩여율리">
   <meta property="og:url" content="https://happily-ever-after.vercel.app/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="영준과 다빈, 결혼합니다">
-  <meta name="description" property="og:description" content="2025년 3월 1일 (토) 15:40 웨딩 여율리">
+  <meta property="og:title" content="">
+  <meta name="description" property="og:description" content="2025년 3월 1일(토) 15:40 웨딩여율리">
   <meta property="og:image" content="/thumbnail.jpg">
 </head>
 
